cabal-version:      2.4
name:               irminsul-api-server
version:            0.1.0.0

synopsis:           Holds all the data for Irminsul

-- A longer description of the package.
description:
    Contains the hierarchy structure of entities and relations.
    Also provide APIs to query them.

-- A URL where users can report bugs.
bug-reports:        https://github.com/SpeedyOrc-C/Irminsul/issues

-- The license under which the package is released.
license:            MIT
author:             陈湛明
maintainer:         1670732206@qq.com

-- A copyright notice.
-- copyright:
-- category:

executable irminsul-api-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        CommonRelations,
        Irminsul,
        LanguagePack,
        Milestone,
        Query,
        Shortcut,

        Data.Xml,
        Data.Vector,
        Data.JSON,
        
        Translation,
        Translation.EnUs,
        Translation.EnUs.Action,
        Translation.EnUs.Entity,
        Translation.ZhCn,
        Translation.ZhCn.Action,
        Translation.ZhCn.Entity,
        Translation.ZhCn.Utility,

        Root,
        Root.AnotherWorld,
        Root.Teyvat,
        Root.Teyvat.Byakuyakoku,
        Root.Teyvat.Deshret,
        Root.Teyvat.Deshret.AaruVillage,
        Root.Teyvat.Fontaine,
        Root.Teyvat.Fontaine.TheSteambird,
        Root.Teyvat.Hexenzirkel,
        Root.Teyvat.Inazuma,
        Root.Teyvat.Inazuma.AratakiGang,
        Root.Teyvat.Inazuma.Shuumatsuban,
        Root.Teyvat.Inazuma.TriCommission,
        Root.Teyvat.Inazuma.TriCommission.KanjouCommission,
        Root.Teyvat.Inazuma.TriCommission.TenryouCommission,
        Root.Teyvat.Inazuma.TriCommission.YashiroCommission,
        Root.Teyvat.Inazuma.WatatsumiIsland,
        Root.Teyvat.Khaenriah,
        Root.Teyvat.Khaenriah.Schwaneritter,
        Root.Teyvat.Kaeya,
        Root.Teyvat.Liyue,
        Root.Teyvat.Liyue.Adepti,
        Root.Teyvat.Liyue.Adepti.CloudRetainersAbode,
        Root.Teyvat.Liyue.Adepti.SeaGazersAbode,
        Root.Teyvat.Liyue.Adepti.StreetwardRamblersAbode,
        Root.Teyvat.Liyue.Adepti.Yaksha,
        Root.Teyvat.Liyue.BubuPharmacy,
        Root.Teyvat.Liyue.CruxFleet,
        Root.Teyvat.Liyue.FeiyunCommerceGuild,
        Root.Teyvat.Liyue.TianhengThaumaturges,
        Root.Teyvat.Liyue.QingceVillage,
        Root.Teyvat.Liyue.Qixing,
        Root.Teyvat.Liyue.WangshengFuneralParlor,
        Root.Teyvat.Liyue.WanminRestaurant,
        Root.Teyvat.Liyue.YuehaiPavilion,
        Root.Teyvat.Liyue.YunHanOperaTroupe,
        Root.Teyvat.Mondstadt,
        Root.Teyvat.Mondstadt.CatsTail,
        Root.Teyvat.Mondstadt.DawnWinery,
        Root.Teyvat.Mondstadt.FavoniusChurch,
        Root.Teyvat.Mondstadt.KnightsOfFavonius,
        Root.Teyvat.Mondstadt.KnightsOfFavonius.GuerillaTeam,
        Root.Teyvat.Mondstadt.Lupical,
        Root.Teyvat.Mondstadt.Springvale,
        Root.Teyvat.Mondstadt.TheFourWinds,
        Root.Teyvat.Natlan,
        Root.Teyvat.Snezhnaya,
        Root.Teyvat.Snezhnaya.Fatui,
        Root.Teyvat.Sumeru,
        Root.Teyvat.Sumeru.Akademiya,
        Root.Teyvat.Sumeru.Akademiya.Rtawahist,
        Root.Teyvat.Sumeru.Akademiya.Haravatat,
        Root.Teyvat.Sumeru.AlcazarzarayPalace,
        Root.Teyvat.Sumeru.GrandharvaVille


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base
        ,warp
        ,wai
        ,wai-extra
        ,http-types
        ,bytestring
        ,text
    hs-source-dirs:   app
    default-language: Haskell2010
